# speaktome

./: .gitattributes  .gitignore  .gitignore.rej  .gitmodules  AGENTS.md  AGENTS_DO_NOT_PIP_MANUALLY.md  AGENTS_FILESYSTEM_MAP.md  AGENTS_TESTING_ADVICE.md  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP_BOX.md  ENV_SETUP_OPTIONS.md  LICENSE  README.md  __init__.py  agent-fix.diff  auto_demo.ps1  auto_demo.sh  beam_retirement_manager.py  beam_search.py  beam_search_instruction.py  beam_tree_visualizer.py  beep  build.zig  clean_windows_returns.sh  compressed_beam_tree.py  config.py  cpu_demo.py  diagnostic_report.md  dump_headers.py  fetch_models.ps1  fetch_models.sh  format_test_digest.py  holographic_signal_proposal.md  human_pilot_controller.py  lazy_loader.py  meta_beam_manager.py  optional_requirements.txt  package-lock.json  package.json  (+23 more)
.changes/: 2025-06-07_feat_changelog_setup.yaml
AGENTS/: AGENTS.md  AGENT_CONSTITUTION.md  CODEBASES_AND_ENVIRONMENT.md  CODEBASE_REGISTRY.md  CODING_STANDARDS.md  CONSTRUCTING_BINARY_TOOLS.md  CONTRIBUTING.md  EPOCH_DATE_POLICY.md  GUESTBOOK.md  OBSOLETE_SETUP_GUIDE.md  PROJECT_OVERVIEW.md  PULL_CONFLICT_RESOLUTION.md  RING_NETWORK_PROTOCOL.md  __init__.py  agent_registry.json  codebase_map.json  github_pat.enc  header_template.py  headers.md  register_agent.py  setup_output.txt  stub_audit_list.txt  stub_audit_signoff.txt  (+1 more)
AGENTS/tools/: AGENTS.md  README.md  __init__.py  add_imports_to_pyproject.py  auto_env_setup.py  auto_fix_headers.py  dev_group_menu.py  dispense_job.py  docstring_map.py  download_toolkit.py  dump_headers.py  dynamic_header_recognition.py  ensure_pyproject_deps.py  fetch_official_time.py  fetch_tensor_sources.py  format_test_digest.py  get_date_range.py  header.py  header_audit.py  header_guard_precommit.py  header_utils.py  list_contributors.py  markdown_descriptions.json  meta_repo_audit.py  path_utils.py  pretty_logger.py  preview_doc.py  prioritize_jobs.py  pyproject.toml  report_abstracttensor_methods.py  report_date_range.py  run_header_checks.py  select_and_run_job.py  setup.py  sort_abstracttensor_methods.py  stats_counter.py  stubfinder.py  stubfinder.py.rej  test_all_headers.py  time_display.py  (+5 more)
AGENTS/tools/headers/: __init__.py  auto_fix_headers.py  dump_headers.py  dynamic_header_recognition.py  header.py  header_audit.py  header_guard_precommit.py  header_template.py  header_utils.py  run_header_checks.py  test_all_headers.py  validate_headers.py
fontmapper/: AGENTS.md  __init__.py  ascii_mapper.py  pyproject.toml
fontmapper/FM16/: FM37--8-32-64-1024-0.15-0.01-prev---modelsimple.pth  FM38.py  FMS6.py  config.yaml  optional_dependencies.py  server.yaml
fontmapper/FM16/modules/: __init__.py  char_sorter.py  charset_ops.py  datasets.py  model_configs.py  model_ops.py  transforms.py
fontmapper2/: AGENTS.md  __init__.py  ascii_mapper.py  pyproject.toml
laplace/: AGENTS.md  README.md  pyproject.toml
laplace/laplace/: __init__.py  builder.py  geometry.py
speaktome/: AGENTS.md  README.md  __init__.py  array_utils.py  beam_graph_operator.py  beam_retirement_manager.py  beam_search.py  beam_tree_visualizer.py  compressed_beam_tree.py  config.py  cpu_demo.py  faculty.py  human_scorer_policy_manager.py  meta_beam_manager.py  model_abstraction.py  pure_python_tensor_operations.py  pyg_graph_controller.py  pygeo_mind.py  pyproject.toml  scorer.py  speaktome.py  tensor_abstraction.py
speaktome/core/: __init__.py  abstract_linear_net.py  beam_graph_operator.py  beam_retirement_manager.py  beam_search.py  beam_search_instruction.py  beam_tree_node.py  beam_tree_visualizer.py  c_tensor_ops.py  compressed_beam_tree.py  compressed_beam_tree.py.rej  human_pilot_controller.py  human_scorer_policy_manager.py  lookahead_controller.py  model_abstraction.py  scorer.py  tensor_abstraction.py
speaktome/domains/: __init__.py
speaktome/domains/geo/: __init__.py  pyg_graph_controller.py  pygeo_mind.py
speaktome/domains/pure/: __init__.py  pure_python_tensor_operations.py
speaktome/tensors/: AGENTS.md  __init__.py  abstraction.py  c_backend.py  faculty.py  jax_backend.py  numpy_backend.py  pure_backend.py  torch_backend.py
speaktome/tensors/c_backend/: AGENTS.md  ctensor_ops.c
speaktome/tensors/models/: AGENTS.md  __init__.py
speaktome/tensors/models/c_gpt/: build.zig  cgpt.py
speaktome/util/: __init__.py  array_utils.py  cli_permutations.py  lazy_loader.py  token_vocab.py
tensor printing/: AGENTS.md  pyproject.toml  setup_env.sh
tensor printing/inspiration/: 1733218107_Digitizer_GlyphAssembler_GradientMaker_GrandPress_Ink_InkWorker_Machine_Material_Paper_PaperWorker_PressOperator_Shop_Tool_Worker.py
tensor printing/tensor_printing/: __init__.py  press.py
tensors/: AGENTS.md  EXPLAINER.md  README.md  __init__.py  abstraction.py  abstraction_functions.md  c_backend.py  faculty.py  jax_backend.py  numpy_backend.py  opengl_backend.py  pure_backend.py  pyproject.toml  setup_env.sh  torch_backend.py
tensors/accelerator_backends/: __init__.py  c_backend.py  c_pipeline.py  coordinator.py  opengl_backend.py  opengl_pipeline.py
tensors/accelerator_backends/c_backend/: AGENTS.md  ctensor_ops.c
tensors/accelerator_backends/glsl_kernels/: AGENTS.md  add.comp.glsl  template.comp.glsl
tensors/models/c_gpt/: cgpt.py
tensors/tensors/: __init__.py  abstraction.py  c_backend.py  faculty.py  jax_backend.py  numpy_backend.py
tensors/tensors/models/c_gpt/: cgpt.c  cgpt.h
testenv/: __init__.py  pyproject.toml
time_sync/: AGENTS.md  README.md  __init__.py  ascii frame buffer implementation path.md  ascii_kernel_classifier.py  clock_demo.py  draw.py  frame_buffer.py  pyproject.toml  render_thread.py  subunit_window.py
time_sync/time_sync/: __init__.py  _internet.py  ascii_digits.py  console.py  core.py  key_mappings.json  render_backend.py  theme_manager.py  time_units.py
time_sync/time_sync/presets/: default_themes.json
timesync/: AGENTS.md  README.md  __init__.py  _internet.py  clock_demo.py  clock_renderer.py  draw.py  frame_buffer.py  menu_resolver.py  pyproject.toml  subunit_window.py  time_units.py
(+1069 files in other folders)
