[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaktome"
version = "0.1.0"
description = "Beam search controllers and utilities for generating text"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "SpeakToMe Authors"}]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
extras = [
    "matplotlib>=3.7",
    "networkx>=3.1",
    "scikit-learn>=1.2",
    "torch_geometric>=2.4",
    "torch>=1.13",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
]

development = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["speaktome*"]
