[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fontmapper"
version = "0.1.0"
description = "ASCII rendering and font mapping utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "FontMapper Authors" }]

# Baseline dependencies -- no heavy ML stack
dependencies = [
    "fonttools",
    "Pillow",
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = [
    "torch",
    "torchvision",
    "pynvml",
]
ssim = [
    "scikit-image",
]
amqp = [
    "pika",
]
server = [
    "flask",
    "flask-cors",
    "waitress; sys_platform == 'win32'",
]
gui = [
    "PyQt5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fontmapper*"]
