[tool.poetry]
name = "fontmapper"
version = "0.1.0"
description = "ASCII rendering and font mapping utilities"
authors = ["FontMapper Authors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
fonttools = "*"
Pillow = "*"
numpy = ">=1.26"

[tool.poetry.group.ml.dependencies]
torch = "*"
torchvision = "*"
pynvml = "*"

[tool.poetry.group.ssim.dependencies]
"scikit-image" = "*"

[tool.poetry.group.amqp.dependencies]
pika = "*"

[tool.poetry.group.server.dependencies]
flask = "*"
"flask-cors" = "*"
"waitress" = {version = "*", markers = "sys_platform == 'win32'"}

[tool.poetry.group.gui.dependencies]
PyQt5 = "*"

[tool.poetry.group.dev.dependencies]
tools = {path = "../AGENTS/tools", develop = true}

[tool.poetry.extras]
ml = []
ssim = []
amqp = []
server = []
gui = []
dev = []

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
