[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fontmapper2"
version = "0.1.0"
description = "Reimagined ASCII rendering utilities"
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "FontMapper V2 Authors" }]

dependencies = [
    "fonttools",
    "Pillow",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fontmapper2*"]
