[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laplace"
version = "0.1.0"
description = "Laplace builder with DEC and neural metric tensors"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Laplace Authors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["laplace*"]
