[tool.poetry]
name = "laplace"
version = "0.1.0"
description = "Laplace builder with DEC and neural metric tensors"
authors = ["Laplace Authors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tools = {path = "../AGENTS/tools", develop = true}

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
