[tool.poetry]
name = "speaktome"
version = "0.1.0"
description = "Beam search controllers and utilities for generating text"
authors = ["SpeakToMe Authors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.26"
tensors = ">=0.1.0"

[tool.poetry.group.plot.dependencies]
matplotlib = ">=3.7"
networkx = ">=3.1"
scikit-learn = ">=1.2"

[tool.poetry.group.ml.dependencies]
transformers = ">=4.30"
"sentence-transformers" = ">=2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
tools = {path = "../AGENTS/tools", develop = true}

[tool.poetry.extras]
plot = []
ml = []
dev = []

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

