[tool.poetry]
name = "tensor_printing"
version = "0.1.0"
description = "Grand Printing Press experiments"
authors = ["Tensor Printing Authors"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
tools = {path = "../AGENTS/tools", develop = true}

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
