[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time_sync"
version = "0.1.0"
description = "System time synchronization utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Time Sync Authors" }]
dependencies = [
    "ntplib",  # Network Time Protocol client library
    "colorama",
    "pillow",
]

[project.optional-dependencies]
gui = [
    "pygame>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["time_sync*"]
