[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Agent tools and repo management utilities for SpeakToMe"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
tomli = {version = "*", python = "<3.11"}
"importlib-metadata" = {version = "*", python = "<3.8"}
pytz = "*"
ntplib = "*"
pytest = ">=8.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
